# math-expresion-evaulation

./: CMakeLists.txt  NumberBuffer.c  NumberBuffer.h  buffer.c  buffer.h  constants.h  letter_buffer.c  letter_buffer.h  logger.c  logger.h  main.c  number_buffer.c  number_buffer.h  shunting-yard.c  shunting-yard.h  stack.c  stack.h  token_list.c  token_list.h  tokenizer.c  tokenizer.h  zasobnik.c
